add social links hover

--- a/index.html
+++ b/index.html
@@ -877,14 +877,15 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                     <section id="social">
                         <!-- <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
                                 target="_blank">picturamundi.com</a></p> -->
-                        <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
-                                target="_blank">u/picturamundi</a>
+                        <p><a class="reddit-link social-link" href="https://reddit.com/user/picturamundi/"
+                                target="_blank"></a>
                         </p>
-                        <p><a class="twitter-link" href="https://twitter.com/picturamundi/with_replies"
-                                target="_blank">@picturamundi</a></p>
-                        <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
-                                target="_blank">picturamundi</a>
+                        <p><a class="keebtalk-link social-link" href="https://www.keebtalk.com/u/picturamundi"
+                                target="_blank"></a>
                         </p>
+                        <p><a class="twitter-link social-link" href="https://twitter.com/picturamundi/with_replies"
+                                target="_blank"></a></p>
+
 
                         <!-- <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
                                 target="_blank">keebtalk</a></p>
