--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <li>Unvoiced and voiced variation on the same sound (e.g. t/d)</li>
                             <li>Similar pronunciation (e.g. both t/d pair and θ/đ pair are pronounced with the tip of
                                 the tongue at the front of the mouth)</li>
-                            <li>Reaccurrence of a sound within compounds (t/d contained in tʃ/dʒ)
+                            <li>Reoccurrence of a sound within compounds (t/d contained in tʃ/dʒ)
                             </li>
                         </ul>
 
@@ -669,10 +669,10 @@
                                 a word will never be written with the same pen stroke as the last letter of the
                                 preceding word.</li>
                             <li>While whole words don't always appear left-to-right, the first letter of a word will
-                                always appear further left than the first letter of the susequent word.</li>
+                                always appear further left than the first letter of the subsequent word.</li>
                         </ul>
 
-                        <p><strong>Some exmaples:</strong></p>
+                        <p><strong>Some examples:</strong></p>
 
                         <p>The most obvious way to write the words “the pen” would be in the following way:
                         </p>
@@ -696,9 +696,9 @@
                         <ul>
                             <li>
                                 A word can sit on a horizontal stroke belonging to a previous word if that horizontal
-                                sroke is at the writing line.
+                                stroke is at the writing line.
                             </li>
-                            <li>The two words remain distinct in that aren't connected with a single cursive stroke.
+                            <li>The two words remain distinct in that aren't connected with a cursive stroke.
                             </li>
                             <li>Word order remains discernible in that the first letter of the first word precedes the
                                 first letter of the second word.</li>
@@ -706,8 +706,7 @@
 
                         <p>As long as word order remains clear thanks to these constants, there's room for quite a bit
                             of flexibility. For example, in the phrase below, “the nib of the pen”, the article “the” is
-                            written in two different ways, for no other reason that this just seemed to fit (individual
-                            words highlighted):</p>
+                            written in two different ways, for no other reason that this just seemed to fit:</p>
 
                         <p style="text-align: center;">
                             <img class="script-scan" src="assets/images/script/the-nib-of-the-pen.svg" alt="">
@@ -722,14 +721,10 @@
 
                 <main id="reflection-main">
                     <article>
-                        <h1>reflection notes</h1>
+                        <!-- <h1>reflection notes</h1>
                         <p>Here I try to describe a simple writing habit that I gradually formed over a couple of years
                             as an exercise in grief. Since then, this practice has become surprisingly clarifying in a
                             variety of other ways as well.</p>
-                        <!-- <p><img class="theme-img" src="assets/images/obsidian-graph.jpg" alt="">
-                        </p>
-                        <p>The above graph is a woefully inadequate representation of the reflection process for reasons
-                            that should become clear below. But it gives a dim idea of the sense-making process.</p> -->
                         <p>The habit has been to let how I write grow as an extension of the personal reflection
                             process. “How I write” means content of course, but also format, and perhaps most important,
                             relationships: the relationship of different entries to each other, the relationship between
@@ -875,7 +870,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                             forth between them depending on the kind of writing tools and environment I want in a given
                             moment.</p>
                         <hr>
-                        <p>More could be said, but I think that covers what matters most.</p>
+                        <p>More could be said, but I think that covers what matters most.</p> -->
                     </article>
                 </main>
 
@@ -929,7 +924,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                 <nav id="game-nav">
                     <section>
                         <h1>shameless ripoff</h1>
-                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;------------ back</a></div>
+                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;----------- back</a></div>
                     </section>
                     <!-- <section>
                         <h2><a onclick="scrollToTop()">outline</a></h2>
@@ -944,7 +939,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                 <nav id="reflection-nav">
                     <section>
                         <h1>reflection notes</h1>
-                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;------------ back</a></div>
+                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;----------- back</a></div>
                     </section>
                     <section>
                         <h2><a onclick="scrollToTop()">outline</a></h2>
