add script github repo link

--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
 
                         <p>It is a work in progress.</p>
 
+                        <p>There is a <a href="https://github.com/picturamundi/manuscript">github repository</a>
+                            associated with this project which, while currently empty, is
+                            where I'll put any eventual font files and the like. Feel free to star if you are
+                            interested.</p>
+
                         <!-- <p style="text-align: center;"> <img src="assets/images/script/work-in-progress.svg" alt=""
                                 width="400px"></p> -->
 
@@ -889,12 +894,12 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
 
                 <nav id="home-nav">
                     <section id="social">
-                        <!-- <p><a class="reddit-link social-link" href="https://reddit.com/user/picturamundi/"
-                                target="_blank"></a>
-                        </p> -->
-                        <p><a class="keebtalk-link social-link" href="https://www.keebtalk.com/u/picturamundi"
+                        <p><a class="reddit-link social-link" href="https://reddit.com/user/picturamundi/"
                                 target="_blank"></a>
                         </p>
+                        <!-- <p><a class="keebtalk-link social-link" href="https://www.keebtalk.com/u/picturamundi"
+                                target="_blank"></a>
+                        </p> -->
                         <p><a class="twitter-link social-link" href="https://twitter.com/picturamundi/with_replies"
                                 target="_blank"></a></p>
                         <p><a class="github-link social-link" href="https://github.com/picturamundi"
