--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@
                         <p>It is a work in progress.</p>
 
                         <p>There is a <a href="https://github.com/picturamundi/manuscript">github repository</a>
-                            associated with this project which, while currently empty, is
-                            where I'll put any eventual font files and the like. Feel free to star if you are
-                            interested.</p>
+                            associated with this project which is where I'll put font files and the like.</p>
 
                         <!-- <p style="text-align: center;"> <img src="assets/images/script/work-in-progress.svg" alt=""
                                 width="400px"></p> -->
