--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <h2 id="consonants">consonants</h2>
 
                         <p>29 English consonant sounds are represented. Rather than simply come up
-                            with 29 unique graphemes, we'll devise a system to organize
+                            with 29 unique glyphs, we'll devise a system to organize
                             these sounds in way that makes writing them more manageable.</p>
 
                         <h3 id="consonant-sounds">consonant sounds</h3>
@@ -499,7 +499,7 @@
 
                         <p>For now, I tend to be able to get away with writing only 15 vowel sounds, which, much like
                             consonant sounds, are organized into families (Y axis) so that we don't have to write 15
-                            unique graphemes.</p>
+                            unique glyphs.</p>
 
                         <div class="large-table vowels">
                             <table class="tg">
