add "coming soon"

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <p>It is a work in progress.</p>
 
                         <p>There is a <a href="https://github.com/picturamundi/manuscript">github repository</a>
-                            associated with this project which is where I'll put font files and the like. Feel free to
+                            associated with this project where I'll put font files and the like. Feel free to
                             star if interested.</p>
 
                         <!-- <p style="text-align: center;"> <img src="assets/images/script/work-in-progress.svg" alt=""
@@ -719,6 +719,8 @@
 
 
                         <h2 id="samples">samples</h2>
+
+                        <p>Coming soon!…</p>
 
                     </article>
                 </main>
