add font to script page

--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
                     </section>
 
                     <section class="hobby">
-                        <p><a href="https://facultejeancalvin.academia.edu/MatthiasSzobody" target="_blank"
+                        <!--<p><a href="https://facultejeancalvin.academia.edu/MatthiasSzobody" target="_blank"
                                 class="external-link">theology</a>
+                        </p>-->
+                        <p><a id="theology" target="_blank" class="external-link">theology</a>
                         </p>
+
                     </section>
 
                 </main>
@@ -131,7 +134,8 @@
 
                         <p>It is a work in progress.</p>
 
-                        <p>There is a <a href="https://github.com/picturamundi/manuscript">github repository</a>
+                        <p>There is a <a target="_blank" href="https://github.com/picturamundi/manuscript">github
+                                repository</a>
                             associated with this project where I'll put font files and the like. Feel free to
                             star if interested.</p>
 
@@ -716,11 +720,165 @@
                             <img class="script-scan" src="assets/images/script/the-nib-of-the-pen.svg" alt="">
                         </p>
 
-
-
                         <h2 id="samples">samples</h2>
 
                         <p>Coming soon!…</p>
+
+                        <h2 id="fonts">fonts</h2>
+
+                        <p>As much as I'd like to make one, there currently is no cursive font for this script. However,
+                            there is a bare bones, somewhat
+                            rough-around-the-edges print font which I made for the purpose of documentation, and
+                            which can be downloaded from the <a href="https://github.com/picturamundi/manuscript">github
+                                repository</a>. This fond only includes consonants.</p>
+
+                        <p>The chart below summarizes how inputs are mapped:</p>
+
+                        <div class="large-table">
+                            <table class="tg" id="print-font-table">
+                                <thead>
+                                    <tr>
+                                        <th class="tg-0lax">letter</th>
+                                        <th class="tg-0lax">lowercase</th>
+                                        <th class="tg-0lax">uppercase</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="tg-0lax">a</td>
+                                        <td class="tg-0lax"></td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">b</td>
+                                        <td class="tg-0lax">b</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">c</td>
+                                        <td class="tg-0lax"></td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">d</td>
+                                        <td class="tg-0lax">d</td>
+                                        <td class="tg-0lax">D</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">e</td>
+                                        <td class="tg-0lax"></td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">f</td>
+                                        <td class="tg-0lax">f</td>
+                                        <td class="tg-0lax">F</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">g</td>
+                                        <td class="tg-0lax">g</td>
+                                        <td class="tg-0lax">G</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">h</td>
+                                        <td class="tg-0lax">h</td>
+                                        <td class="tg-0lax">H</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">i</td>
+                                        <td class="tg-0lax"></td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">j</td>
+                                        <td class="tg-0lax">j</td>
+                                        <td class="tg-0lax">J</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">k</td>
+                                        <td class="tg-0lax">k</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">l</td>
+                                        <td class="tg-0lax">l</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">m</td>
+                                        <td class="tg-0lax">m</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">n</td>
+                                        <td class="tg-0lax">n</td>
+                                        <td class="tg-0lax">N</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">o</td>
+                                        <td class="tg-0lax"></td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">p</td>
+                                        <td class="tg-0lax">p</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">q</td>
+                                        <td class="tg-0lax">q</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">r</td>
+                                        <td class="tg-0lax">r</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">s</td>
+                                        <td class="tg-0lax">s</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">t</td>
+                                        <td class="tg-0lax">t</td>
+                                        <td class="tg-0lax">T</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">u</td>
+                                        <td class="tg-0lax"></td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">v</td>
+                                        <td class="tg-0lax">v</td>
+                                        <td class="tg-0lax">V</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">w</td>
+                                        <td class="tg-0lax">w</td>
+                                        <td class="tg-0lax">W</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">x</td>
+                                        <td class="tg-0lax">x</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">y</td>
+                                        <td class="tg-0lax">y</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">z</td>
+                                        <td class="tg-0lax">z</td>
+                                        <td class="tg-0lax"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
+
 
                     </article>
                 </main>
@@ -921,6 +1079,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <p><a onclick="scrollToHeading('vowels')">vowels</a></p>
                         <p><a onclick="scrollToHeading('cursive')">cursive</a></p>
                         <p><a onclick="scrollToHeading('samples')">samples</a></p>
+                        <p><a onclick="scrollToHeading('fonts')">fonts</a></p>
                     </section>
                     <section>
                         <p id="toggle-wrapper"><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
