add coming soon

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 
                         <h2 id="samples">samples</h2>
 
-                        <p>Coming soon!…</p>
+                        <p>coming soon</p>
 
                         <h2 id="fonts">fonts</h2>
 
