add sample text to script

--- a/index.html
+++ b/index.html
@@ -720,9 +720,21 @@
                             <img class="script-scan" src="assets/images/script/the-nib-of-the-pen.svg" alt="">
                         </p>
 
-                        <h2 id="samples">samples</h2>
+                        <h2 id="samples">sample text</h2>
 
-                        <p>coming soon</p>
+                        Transcription below.
+
+                        <img src="assets/images/scipt-samples/asterix-in-corsica.jpg" class="img-transparent" alt="">
+
+                        <p>Title: “Asterix in Corsica”</p>
+
+                        <p>
+                            “For most people, Corsica is the homeland of an emperor who has left
+                            pages in history as indelible as those inspired by our old friend Julius Caesar. It is the
+                            country of vendettas, siestas, complicated
+                            political games, strong cheese, wold pigs, chestnuts, succulent blackbirds and
+                            spry old men watching the world go by…”
+                        </p>
 
                         <h2 id="fonts">fonts</h2>
 
