--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
 
                         Transcription below.
 
-                        <img src="assets/images/scipt-samples/asterix-in-corsica.jpg" class="img-transparent" alt="">
+                        <img src="assets/images/scipt-samples/asterix-in-corsica.jpeg" class="img-transparent" alt="">
 
                         <p>Title: “Asterix in Corsica”</p>
 
