--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             similarity (X axis in the table below):</p>
                         <ul>
                             <li>Unvoiced and voiced variation on the same sound (e.g. t/d)</li>
-                            <li>Similar pronunciation (e.g. both t/d pair and θ/đ pair are pronounced with the tip of
+                            <li>Related pronunciation (e.g. both t/d pair and θ/đ pair are pronounced with the tip of
                                 the tongue at the front of the mouth)</li>
                             <li>Reoccurrence of a sound within compounds (t/d contained in tʃ/dʒ)
                             </li>
@@ -732,7 +732,7 @@
                             “For most people, Corsica is the homeland of an emperor who has left
                             pages in history as indelible as those inspired by our old friend Julius Caesar. It is the
                             country of vendettas, siestas, complicated
-                            political games, strong cheese, wold pigs, chestnuts, succulent blackbirds and
+                            political games, strong cheese, wild pigs, chestnuts, succulent blackbirds and
                             spry old men watching the world go by…”
                         </p>
 
